[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/rooms/Sliding_door.gd" type="Script" id=1]
[ext_resource path="res://assets/parts/floor_1_1x1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/parts/wall_2_1x1.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/parts/roof_1x1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/parts/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/freesound.org/54974__neufv__spacedoor-open.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 3 )

[node name="Sliding_door" type="Spatial"]
script = ExtResource( 1 )

[node name="Frame" type="Spatial" parent="."]

[node name="floor_01" parent="Frame" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="floor_02" parent="Frame" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="wall_01" parent="Frame" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="wall_02" parent="Frame" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 2, 0 )

[node name="wall_03" parent="Frame" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 2, 2, 0 )

[node name="wall_04" parent="Frame" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 2, 0, 0 )

[node name="roof_01" parent="Frame" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 4, 0 )

[node name="roof_02" parent="Frame" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 4, 0 )

[node name="Doors" type="Spatial" parent="."]

[node name="Left_door" parent="Doors" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0 )

[node name="Right_door" parent="Doors" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 1, 2, 0 )

[node name="open_door_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="open_door_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="Door_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
bus = "Environment"
[connection signal="body_entered" from="open_door_area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="open_door_area" to="." method="_on_body_exited"]
